--- a/config.example.json
+++ b/config.example.json
@@ -1,4 +1,4 @@
 {
-    "authToken": "123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11",
+    "authToken": "1549080695:AAEDR4cFpHxE1_QorBrlWiI9-W1JjjJQado",
     "owner": 622597525
 }
